--- a/ColorCounter.Interfaces/ColorCounter.Interfaces.csproj
+++ b/ColorCounter.Interfaces/ColorCounter.Interfaces.csproj
@@ -75,6 +75,7 @@
     <Reference Include="System.Runtime.Serialization" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IResultAggregator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IColorCounter.cs" />
   </ItemGroup>
