--- a/ColorCounter/ColorCounter.csproj
+++ b/ColorCounter/ColorCounter.csproj
@@ -85,6 +85,7 @@
     <Reference Include="System.Runtime.Serialization" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ResultAggregator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ColorCounter.cs" />
     <Compile Include="Program.cs" />
