updated demo controller

--- a/ColorCounter.Web/ColorCounter.Web.csproj
+++ b/ColorCounter.Web/ColorCounter.Web.csproj
@@ -131,6 +131,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\ConcurrencyDemoController.cs" />
     <Compile Include="Controllers\PixelController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\ImageController.cs" />
